--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>CucumberTestMain</mainClass>
+                                    <mainClass>cucumber.api.cli.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -136,7 +136,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.3.2</version>
                 <configuration>
-                    <mainClass>CucumberTestMain</mainClass>
+                    <mainClass>cucumber.api.cli.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
