--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,19 @@
     <packaging>jar</packaging>
 
     <properties>
-        <scala.version>2.11.7</scala.version>
-        <cucumber.version>1.2.4</cucumber.version>
+        <scala.version>2.12.2</scala.version>
+        <cucumber.version>2.0.0-SNAPSHOT</cucumber.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -20,17 +30,17 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-scala_2.11</artifactId>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-scala_2.12</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-core</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
