--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <scala.version>2.12.2</scala.version>
-        <cucumber.version>2.0.0-SNAPSHOT</cucumber.version>
+        <scala.version>2.12.4</scala.version>
+        <cucumber.version>2.0.1</cucumber.version>
     </properties>
 
     <repositories>
