--- a/pom.xml
+++ b/pom.xml
@@ -27,17 +27,17 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-scala_3</artifactId>
-            <version>8.13.1</version>
+            <version>8.14.2</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-core</artifactId>
-            <version>7.10.1</version>
+            <version>7.11.2</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>7.10.1</version>
+            <version>7.11.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -141,7 +141,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>cucumber.api.cli.Main</mainClass>
+                    <mainClass>io.cucumber.core.cli.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
