--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,18 +2,19 @@ name: Build
 on:
   push:
     branches: [ main ]
-    pull_request:
+  pull_request:
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-      - name: Set up JDK 8
+      - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '8'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'temurin'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
